Tue Aug 13 21:37:08 2002  Till Adam  <till@adam-lilienthal.de>
 
 * add a little timeout after deletion of a file. The camera ignores
   successive deletes otherwise.

Tue Aug 13 14:13:27 2002  Till Adam  <till@adam-lilienthal.de>

 * disallow deletion of anything but the last file on the camera

Sat Aug 10 19:03:31 2002  Till Adam  <till@adam-lilienthal.de>
  
 * remove debugging calls
 * allocate space for GsmartFile structures dynamically
 * sprintf -> snprintf, strcpy -> strncpy, fprintf -> gp_context_error
 * make internally used functions static and remove them from gsmart.h
 
Mon Aug 05 00:01:06 2002  Till Adam  <till@adam-lilienthal.de>
 
 * initial release of the module