@@ -20,7 +20,6 @@ movie on the camera.
 ----------------------------------------------------------------
 TODO List
 ---------
-	- implement thumbnails for avi files
 	- implement downloading of avi files
 	- implement streaming "webcam" mode
 
