@@ -1,3 +1,7 @@
+Thu Aug 22 20:46:02 2002  Till Adam  <till@adam-lilienthal.de>
+  
+ * add support for avi thumbnails
+
 Tue Aug 13 21:37:08 2002  Till Adam  <till@adam-lilienthal.de>
  
  * add a little timeout after deletion of a file. The camera ignores
